sandbox/output
Anagram.java:6: error: incompatible types: String cannot be converted to List<String>
        return "a";
               ^
1 error
